[package]
name = "megascope"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"

[dependencies.bevy]
version = "0.15.3"
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "webgl2",
    "wayland",
    "x11",
]
default-features = false

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
