[package]
name = "bevy-force-directed-graph"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_force_directed_graph"

[dependencies]
rand = { version = "0.9.0", default-features = false, features = ["small_rng", "std"] }

[dependencies.bevy]
version = "0.15.3"
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_dev_tools",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "wayland",
    "webgl2",
]
default-features = false

[dev-dependencies]
paste = "1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
